Site header including:  - fontawesome 5 social icons  - pridecodes strip as the nav separator  - mobile view with centered brand/social  - centered menu items for site menu

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link rel="manifest" href="<%= htmlWebpackPlugin.files.publicPath %>static/manifest.json">
     <meta name="theme-color" content="#4DBA87">
 
+    <!-- it wouldn't be developerjack.com if it didn't have an https://pride.codes asset! -->
+    <link rel="stylesheet" href="https://cdn.pride.codes/css/bar_helpers.css">
+
     <!-- Add to home screen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
