--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
     <link rel="manifest" href="<%= htmlWebpackPlugin.files.publicPath %>static/manifest.json">
     <meta name="theme-color" content="#4DBA87">
 
-    <!-- it wouldn't be developerjack.com if it didn't have an https://pride.codes asset! -->
-    <link rel="stylesheet" href="https://cdn.pride.codes/css/bar_helpers.css" rel="preload" as="style" onload="this.rel='stylesheet'">
-
     <!-- Add to home screen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -37,5 +34,26 @@
     <!-- Todo: only include in production -->
     <%= htmlWebpackPlugin.options.serviceWorkerLoader %>
     <!-- built files will be auto injected -->
+
+    <!-- it wouldn't be developerjack.com if it didn't have an https://pride.codes asset! -->
+  <link rel="stylesheet" href="https://cdn.pride.codes/css/bar_helpers.css" rel="preload" as="style" onload="this.rel='stylesheet'">
+  
+  <!-- Required for posts that embed twitter -->
+  <script>window.twttr = (function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0],
+    t = window.twttr || {};
+    if (d.getElementById(id)) return t;
+    js = d.createElement(s);
+    js.id = id;
+    js.async='async';
+    js.src = "https://platform.twitter.com/widgets.js";
+    fjs.parentNode.insertBefore(js, fjs);
+
+    t._e = [];
+    t.ready = function(f) {
+      t._e.push(f);
+    };
+    return t;
+  }(document, "script", "twitter-wjs"));</script>
   </body>
 </html>
